# Arbitrage-Detector

./: CMakeLists.txt  README.md  arbitrage.cpp  arbitrage.h  contract.md  main.cpp  proposal.md  tests.cpp
csv_files/: exchange_rate.csv  exchange_rate_test.csv  location.csv  location_test.csv
